--- a/bower.json
+++ b/bower.json
@@ -3,8 +3,6 @@
   "version": "0.2.0",
   "dependencies": {},
   "devDependencies": {
-    "angular": "1.0.6",
-    "angular-mocks": "1.0.6",
-    "unstable-angular-complete": "1.1.4"
+    "unstable-angular-complete": "1.2.0rc2"
   }
 }
