Updated test to AngularJS 1.2.0

--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "dependencies": {},
   "devDependencies": {
-    "unstable-angular-complete": "1.2.0rc2"
+    "angular": "1.2.0",
+    "angular-mocks": "1.2.0"
   }
 }
