--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "dependencies": {},
   "devDependencies": {
-    "angular": "1.2.0",
-    "angular-mocks": "1.2.0"
+    "angular": "1.2.x",
+    "angular-mocks": "1.2.x"
   }
 }
